# bavy_jam1

./: .gitignore  Cargo.toml  README.md  licenses.html
.github/workflows/: release.yaml
assets/: asset_manifest.json
crates/anim_ui/src/: despawn.rs  despawn_on.rs
crates/yolo/: build.rs
src/: dbg.rs  main.rs  prelude.rs
src/dev_tools/debug_panel/: mod.rs
src/dev_tools/inspect/: resource_sys.rs  sys_filter.rs
src/game_manager/: bgm.rs  mod.rs  sprite_layer.rs
src/game_manager/background/: bubble.rs  mod.rs
src/game_manager/cat/: mod.rs
src/game_manager/cat/sleepy/: mod.rs  wake.rs
src/game_manager/cheese/: eat.rs  mod.rs  spawn.rs
src/game_manager/end/: mod.rs
src/game_manager/escape/: animation.rs  mod.rs  overlap.rs  spawn.rs
src/game_manager/failed/: mod.rs
src/game_manager/player/: hand_drawing.rs  mod.rs  noise.rs
src/game_manager/player/mouse/: black_mouse_animation.rs  hand.rs  mod.rs  start.rs
src/game_manager/tutorials/: message.rs  mod.rs  ui.rs
src/screens/: start_game_ui.rs
src/theme/: palette.rs
