[workspace]
resolver = "2"
members = [
    ".",
    "crates/yolo",
    "crates/ai_core",
    "crates/kira_ext",
    "crates/dev_debug_panel",
    "crates/camera_effects",
    "crates/anim_ui",
    "tools/asset_scanner",
]

[workspace.dependencies]
# ─── Engine ───────────────────────────────────────────────────────────────────
bevy = { rev = "d06aa47744dfa378f2e8a31cd7ff2d59c9afe4b9", git = "https://github.com/bevyengine/bevy", default-features = false }
bevy_common_assets = { git = "https://github.com/rockcen9/bevy_common_assets/", rev = "284044a68b39858659a6f42e6daab4b07ec98abd", features = [
    "json",
] }

# ─── ML ───────────────────────────────────────────────────────────────────────
burn = { git = "https://github.com/tracel-ai/burn", rev = "0e3dddb7f105f42ba7cc948c1ee6c1350cc14468", default-features = false }
burn-store = { git = "https://github.com/tracel-ai/burn", rev = "0e3dddb7f105f42ba7cc948c1ee6c1350cc14468", default-features = false }
burn-onnx = { git = "https://github.com/tracel-ai/burn-onnx", rev = "c7b1944459d76cfe9daed34d13fcd6dde6ae6381", default-features = false }

# ─── Workspace crates ─────────────────────────────────────────────────────────
ai_core = { path = "crates/ai_core" }
yolo = { path = "crates/yolo" }
kira_ext = { path = "crates/kira_ext" }
dev_debug_panel = { path = "crates/dev_debug_panel" }
camera_effects = { path = "crates/camera_effects" }
anim_ui = { path = "crates/anim_ui" }
bevy_kira_audio = { git = "https://github.com/rockcen9/bevy_kira_audio/", rev = "609e0514c016e1ef7da8d132f0f00a79c5cdd41b" }

# ─── Utilities ────────────────────────────────────────────────────────────────
crossbeam-channel = "0.5.15"

tracing = { version = "0.1" }
# webbrowser = { version = "1" }
dotenvy = "0.15.7"
bevy_tweening = { git = "https://github.com/rockcen9/bevy_tweening", rev = "1a412107c5cdfbb4f012e79d703487d076e44d39" }
bitflags = "2.11.0"
extol_sprite_layer = { rev = "71f07a2ca1b1b71fe06d70fcd6c0b248e1b2fad2", git = "https://github.com/rockcen9/extol_sprite_layer" }
bevy-inspector-egui = { git = "https://github.com/rockcen9/bevy-inspector-egui/", rev = "27d79119e1b888348e925d7959d3e3cf63b408b5" }
image = { version = "0.25.5", default-features = false }
fast_image_resize = "4"
bevy_framepace = { git = "https://github.com/rockcen9/bevy_framepace", rev = "512a39198c8e32b1aff199da203646d81384587a" }
# ─── WASM ─────────────────────────────────────────────────────────────────────
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3" }
bevy_nokhwa = { git = "https://github.com/rockcen9/bevy_nokhwa/", rev = "ee809165a3e4c64013d0c808b101eed253a95a7a" }

bevy_simple_screen_boxing = { git = "https://github.com/rockcen9/bevy_simple_screen_boxing/", rev = "32c415ab685d9ea9629d23983b55e46a90188f1c" }
[package]
name = "bevy_game"
version = "0.1.3"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
# ─── Engine ───────────────────────────────────────────────────────────────────
bevy = { workspace = true, features = [
    "2d",
    "bevy_text",
    "bevy_ui",
    "bevy_gizmos",
    "pan_camera",
    "webgpu",
    "png",
    "jpeg",
    "2d_bevy_render",
    "default_app",
    "default_platform",
    "ui_api",
    "ui_bevy_render",
    "scene",
    "gif",
    "bevy_scene2",
    "debug",

] }
yolo = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_kira_audio = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# crossbeam-channel = { workspace = true }

bevy-intl = { git = "https://github.com/rockcen9/bevy-intl.git", rev = "2ba913e64a3b2b3da4e5caeb88f15c35150d7375" }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = { workspace = true, features = [
    "max_level_debug",
    "release_max_level_warn",
] }
dotenvy = { workspace = true, optional = true }
bevy_tweening = { workspace = true }
bitflags = { workspace = true }
extol_sprite_layer = { workspace = true }
bevy_framepace = { workspace = true }
bevy-inspector-egui = { workspace = true, features = [
    "highlight_changes",
], optional = true }
smol_str = { version = "0.3.5", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
heck = "0.5.0"
kira_ext = { workspace = true, features = [] }
dev_debug_panel = { workspace = true, optional = true }
camera_effects = { workspace = true }
anim_ui = { workspace = true }
bevy_simple_screen_boxing = { workspace = true }
getrandom = { version = "0.4" }
rand = "0.10"
signal-smooth = "0.1.0"
vleue_kinetoscope = { git = "https://github.com/rockcen9/vleue_kinetoscope/", rev = "8162ef09b1b047ef66915f85190fd2eae69d4380", default-features = false, features = [
    "gif",
    "streaming",
] }

[features]
default = []
# Activates the real ML/camera backend (burn + nokhwa) in ai_core and
# downstream crates.  Omit this feature during development for fast builds.
backend = ["yolo/backend", "kira_ext/backend", "dep:bevy_kira_audio"]
dev = [
    "bevy/bevy_dev_tools",
    "bevy/track_location",
    "dep:bevy-inspector-egui",
    "dep:dotenvy",
    "dep:dev_debug_panel",
]
dev_native = ["dev"]
web = ["bevy/webgpu"]
release = []
left_hand = []


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
getrandom = { version = "0.4", features = ["wasm_js"] }
